2006-02-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed typo deliver_sm -> data_sm.
    Thanks to Stipe for pointing to this.

2006-02-04  Stipe Tolj  <stolj at kannel.org>
  * gw/pushkannel.conf: remove trailing newlines. NLC.
  
2006-02-04  Stipe Tolj  <stolj at kannel.org>
  * gw/ota_compiler.c: fixed OMA compilation, due to mis-ordered array of 
    parameter attributes which caused all attributes to be inlined.
    Thanks to Tomas Varaneckas <tomas.varaneckas@metasite.net> for report.
    [Msg-Id: <43E071A8.40302@metasite.net>]

2006-01-29  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml, gw/smsc/smsc_smpp.c, gwlib/cfg.def: applied
    patch from Peter Christensen that adds new config option 'alt-addr-charset'
    which make it possible to define charset for the alphanumeric source address.
    Patch was modified by me to match Kannel coding style.
    [Msg-Id: <43D0C806.2020907@coolsystems.dk>]

2006-01-19  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed bug that SMSCConn status was not set to DEAD when
    io_thread terminates.
    Thanks to Peter Christensen for pointing to this and partially patch.

2006-01-13  Stipe Tolj  <stolj at kannel.org>
  * configure[.in]: reverting changes from Andreas in rev 1.154 for setting
    both (i386 and ppc) architecture flags for darwin (MacOS X). This causes
    errors with -MM cfalgs and we should build for the architecture we run.
    Thanks to Cesar Gutierrez Corea <cgcorea@gmail.com> for his reporting
    and Aarno for investigating this issue further on.
    [Msg-Id: <60387C21-74FA-4E5F-B61A-AA6C3D963BDA@gmail.com>]
  
2006-01-12  Stipe Tolj  <stolj at kannel.org>
  * utils/run-checks: use /bin/sh instead of /bin/bash for the sake of
    platforms that don't come with a standard bash, ie. FreeBSD.
    
2006-01-12  Stipe Tolj  <stolj at kannel.org>
  * gwlib/octstr.c: adding support for the va_list handling on FreeBSD AMD64.