@@ -74,7 +74,6 @@ D/smsc////
 /wap_push_si_compiler.h/1.4/Fri Nov 11 16:58:35 2005//
 /wap_push_sl_compiler.c/1.5/Fri Nov 11 16:58:35 2005//
 /wap_push_sl_compiler.h/1.4/Fri Nov 11 16:58:35 2005//
-/wapbox.c/1.180/Tue Jan 10 11:56:28 2006//
 /wapkannel.conf/1.14/Tue Jan 10 11:56:28 2006//
 /wbxml_tokens.def/1.1/Mon Dec 26 05:16:50 2005//
 /wml_compiler.c/1.128/Tue Jan 10 11:56:28 2006//
@@ -85,3 +84,4 @@ D/smsc////
 /xml_shared.h/1.9/Tue Jan 10 11:53:56 2006//
 /ota_compiler.c/1.8/Mon Feb  6 16:20:03 2006//
 /pushkannel.conf/1.14/Mon Feb  6 16:20:03 2006//
+/wapbox.c/1.181/Fri Feb 10 17:28:41 2006//
